# gilded-rose-python

./: .gitignore  README.md  dev-log.md  gilded_rose.py  pyproject.toml  requirements.txt  texttest_fixture.py
.devcontainer/: devcontainer.json
tests/: approvaltests_config.json  test_gilded_rose.py  test_gilded_rose_approvals.py
