[project]
name = "gilded-rose-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
lint = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
]
test = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "missing-module-docstring,missing-function-docstring,missing-class-docstring,too-few-public-methods"